fixes in localisation

--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -1,129 +1,224 @@
 {
+  "auth": {
+    "conductorLogin": "Conductor Login",
+    "enterVehicleDetails": "Enter your vehicle details",
+    "plateNumber": "Plate Number",
+    "password": "Password",
+    "signIn": "Sign In",
+    "error": "Error",
+    "allFieldsRequired": "All fields are required",
+    "invalidCredentials": "Invalid credentials",
+    "welcomeBack": "Welcome Back!",
+    "loginToContinue": "Login to continue",
+    "email": "Email",
+    "rememberMe": "Remember Me",
+    "forgotPassword": "Forgot Password?"
+  },
   "common": {
     "login": "Login",
-    "register": "Register",
     "email": "Email",
     "password": "Password",
-    "confirmPassword": "Confirm Password",
-    "forgotPassword": "Forgot Password?",
+    "retry": "Retry",
+    "close": "Close",
+    "cancel": "Cancel",
+    "delete": "Delete"
+  },
+  "conductorHome": {
+    "fetchError": "Error fetching data",
+    "unknownError": "An unknown error occurred",
+    "vehicleDetails": "Vehicle Details",
+    "year": "Year",
+    "kilometers": "Kilometers",
+    "fuelType": "Fuel Type",
+    "transmission": "Transmission",
+    "vin": "VIN",
+    "upcomingServices": "Upcoming Services",
+    "noUpcomingServices": "No upcoming services",
+    "fuelTypes": {
+      "gasoline": "Gasoline",
+      "diesel": "Diesel",
+      "electric": "Electric",
+      "hybrid": "Hybrid"
+    },
+    "transmissionTypes": {
+      "manual": "Manual",
+      "automatic": "Automatic",
+      "cvt": "CVT"
+    }
+  },
+  "services": {
+    "title": "Available Services",
+    "availableServices": "Available Services",
+    "fetchError": "Error fetching services",
+    "noServicesAvailable": "No services available",
+    "price": "Price: {{price}}",
+    "uncategorized": "Uncategorized",
+    "categories": {
+      "maintenance": "Maintenance",
+      "repair": "Repair",
+      "diagnostics": "Diagnostics",
+      "comfort": "Comfort"
+    },
+    "orderService": "Order Service",
+    "serviceDetails": "Service Details",
+    "estimatedDuration": "Estimated Duration: {{duration}} minutes",
+    "servicePrice": "Price:",
+    "selectVehicle": "Select Vehicle",
+    "selectVehiclePrompt": "Tap to select a vehicle",
+    "serviceDate": "Service Date",
+    "confirmOrder": "Confirm Order",
+    "submitError": "Error submitting order",
+    "serviceNotFound": "Service not found"
+  },
+  "orderService": {
+    "title": "Order Service",
+    "serviceDetails": "Service Details",
+    "serviceDate": "Service Date",
+    "estimatedDuration": "Estimated Duration: {{duration}} minutes",
+    "servicePrice": "Price: {{price}}",
+    "confirmService": "Confirm Service",
+    "fetchError": "Error fetching service details",
+    "unknownError": "An unknown error occurred",
+    "success": "Success",
+    "serviceConfirmed": "Service has been confirmed",
+    "error": "Error",
+    "confirmError": "Error confirming service. Please try again."
+  },
+  "serviceHistory": {
+    "title": "Service History",
+    "fetchError": "Error fetching service history",
+    "noRecords": "No service records found",
+    "filter": "Filter",
+    "sort": "Sort",
+    "filterBy": "Filter By",
+    "sortBy": "Sort By",
+    "sortByDate": "Date",
+    "sortByCost": "Cost",
+    "ascending": "Ascending",
+    "descending": "Descending",
+    "export": "Export History",
+    "unknownService": "Unknown Service",
+    "unknownVehicle": "Unknown Vehicle",
+    "unknownStatus": "Unknown Status",
+    "unknownCost": "Unknown Cost"
+  },
+  "serviceStatus": {
+    "all": "All",
+    "pending": "Pending",
+    "in_progress": "In Progress",
+    "completed": "Completed",
+    "cancelled": "Cancelled"
+  },
+  "navigation": {
     "home": "Home",
     "fleet": "Fleet",
     "services": "Services",
     "profile": "Profile",
-    "save": "Save",
-    "cancel": "Cancel",
-    "edit": "Edit",
-    "delete": "Delete",
-    "add": "Add",
-    "submit": "Submit",
-    "back": "Back",
-    "close": "Close"
-  },
-  "auth": {
-    "login": "Login",
-    "email": "Email",
-    "password": "Password",
-    "signIn": "Sign In",
-    "rememberMe": "Remember Me",
-    "forgotPassword": "Forgot Password?",
-    "welcomeBack": "Welcome Back!",
-    "loginToContinue": "Login to continue",
-    "error": "Error",
-    "allFieldsRequired": "All fields are required"
+    "orderService": "Order Service",
+    "serviceHistory": "Service History",
+    "addVehicle": "Add Vehicle",
+    "vehicleDetails": "Vehicle Details",
+    "invoices": "Invoices",
+    "editProfile": "Edit Profile",
+    "settings": "Settings",
+    "support": "Support",
+    "serviceChat": "Service Chat"
   },
   "home": {
-    "welcome": "Welcome back!",
+    "welcome": "Welcome",
     "quickService": "Quick Service",
     "serviceHistory": "Service History",
     "myVehicles": "My Vehicles",
+    "noVehicles": "No vehicles found",
     "upcomingServices": "Upcoming Services",
-    "viewAllServices": "View All Services"
+    "noUpcomingServices": "No upcoming services",
+    "viewAllServices": "View All Services",
+    "no_service": "No service history",
+    "fetchFailed": "Failed to fetch data"
+  },
+  "error": {
+    "title": "Error",
+    "fetchFailed": "Failed to fetch data"
   },
   "fleet": {
     "title": "My Fleet",
+    "fetchError": "Error fetching vehicles",
     "addVehicle": "Add Vehicle",
-    "editVehicle": "Edit Vehicle",
-    "removeVehicle": "Remove Vehicle",
-    "vehicleName": "Vehicle Name",
-    "vehicleType": "Vehicle Type",
-    "licensePlate": "License Plate"
+    "emptyStateTitle": "No Vehicles Yet",
+    "emptyStateDescription": "Add your first vehicle to get started",
+    "addFirstVehicle": "Add Your First Vehicle"
   },
-"vehicleDetail": {
+  "addVehicle": {
+    "title": "Add Vehicle",
+    "brand": "Brand",
+    "selectBrand": "Select Brand",
+    "model": "Model",
+    "enterModel": "Enter Model",
+    "plateNumber": "Plate Number",
+    "enterPlateNumber": "Enter Plate Number",
+    "year": "Year",
+    "enterYear": "Enter Year",
+    "vin": "VIN",
+    "enterVin": "Enter VIN",
+    "mileage": "Mileage",
+    "enterMileage": "Enter Mileage",
+    "fuelType": "Fuel Type",
+    "selectFuelType": "Select Fuel Type",
+    "gasoline": "Gasoline",
+    "diesel": "Diesel",
+    "electric": "Electric",
+    "hybrid": "Hybrid",
+    "transmission": "Transmission",
+    "selectTransmission": "Select Transmission",
+    "manual": "Manual",
+    "automatic": "Automatic",
+    "conductorPassword": "Conductor Password",
+    "enterConductorPassword": "Enter Conductor Password",
+    "addVehicle": "Add Vehicle",
+    "fillAllFields": "Please fill all fields",
+    "vehicleAdded": "Vehicle added successfully",
+    "addFailed": "Failed to add vehicle",
+    "brandsFetchFailed": "Failed to fetch brands"
+  },
+  "vehicleDetail": {
     "details": "Vehicle Details",
     "year": "Year",
     "make": "Make",
     "model": "Model",
-    "mileage": "Mileage",
+    "kilometers": "Kilometers",
     "fuelType": "Fuel Type",
     "transmission": "Transmission",
     "vin": "VIN",
+    "fuelTypes": {
+      "gasoline": "Gasoline",
+      "diesel": "Diesel",
+      "electric": "Electric",
+      "hybrid": "Hybrid"
+    },
+    "transmissionTypes": {
+      "manual": "Manual",
+      "automatic": "Automatic"
+    },
+    "save": "Save Changes",
+    "edit": "Edit Vehicle",
+    "delete": "Delete Vehicle",
+    "resetConductorPassword": "Reset Conductor Password",
+    "enterNewPassword": "Enter new password",
+    "resetPassword": "Reset Password",
     "orderService": "Order Service",
-    "serviceHistory": "Service History"
+    "serviceHistory": "Service History",
+    "fetchError": "Error fetching vehicle details",
+    "unknownError": "An unknown error occurred",
+    "updateSuccess": "Vehicle updated successfully",
+    "updateFailed": "Failed to update vehicle",
+    "deleteConfirmTitle": "Delete Vehicle",
+    "deleteConfirmMessage": "Are you sure you want to delete this vehicle?",
+    "deleteSuccess": "Vehicle deleted successfully",
+    "deleteFailed": "Failed to delete vehicle",
+    "passwordResetSuccess": "Password reset successfully",
+    "passwordResetFailed": "Failed to reset password"
   },
-  "services": {
-    "title": "Our Services",
-    "orderService": "Order Service",
-    "scheduleAppointment": "Schedule Appointment",
-    "trackOrder": "Track Order",
-    "serviceType": "Service Type",
-    "serviceDate": "Service Date",
-    "serviceTime": "Service Time",
-    "selectDate": "Select Date",
-    "selectTime": "Select Time",
-    "selectVehicle": "Select Vehicle",
-    "orderDetails": "Order Details",
-    "confirmOrder": "Confirm Order",
-    "maintenance": "Maintenance",
-    "repair": "Repair",
-    "comfort": "Comfort",
-    "diagnostics": "Diagnostics"
-  },
-"serviceHistory": {
-    "title": "Service History",
-    "filterBy": "Filter by",
-    "sortBy": "Sort by",
-    "all": "All",
-    "sortByDate": "Date",
-    "sortByCost": "Cost",
-    "export": "Export History"
-  },
-  "serviceStatus": {
-    "completed": "Completed",
-    "scheduled": "Scheduled",
-    "in-progress": "In Progress",
-    "cancelled": "Cancelled"
-  },
-  "addVehicle": {
-    "title": "Add Vehicle",
-    "vehicleName": "Vehicle Name",
-    "enterVehicleName": "Enter vehicle name",
-    "vehicleType": "Vehicle Type",
-    "selectType": "Select vehicle type",
-    "car": "Car",
-    "truck": "Truck",
-    "motorcycle": "Motorcycle",
-    "licensePlate": "License Plate",
-    "enterLicensePlate": "Enter license plate",
-    "addVehicle": "Add Vehicle",
-    "error": "Error",
-    "fillAllFields": "Please fill all fields",
-    "success": "Success",
-    "vehicleAdded": "Vehicle added successfully"
-  },
-  "settings": {
-    "title": "Settings",
-    "appearance": "Appearance",
-    "darkMode": "Dark Mode",
-    "notifications": "Notifications",
-    "pushNotifications": "Push Notifications",
-    "emailNotifications": "Email Notifications",
-    "language": "Language",
-    "about": "About",
-    "version": "Version",
-    "termsOfService": "Terms of Service",
-    "privacyPolicy": "Privacy Policy"
-  },
- "profile": {
+  "profile": {
     "editProfile": "Edit Profile",
     "invoices": "Invoices",
     "notifications": "Notifications",
@@ -134,14 +229,14 @@
     "logout": "Logout"
   },
   "editProfile": {
-    "name": "Name",
-    "email": "Email",
-    "phone": "Phone",
     "changePhoto": "Change Photo",
-    "save": "Save Changes",
+    "name": "Name",
     "namePlaceholder": "Enter your name",
+    "email": "Email",
     "emailPlaceholder": "Enter your email",
-    "phonePlaceholder": "Enter your phone number"
+    "phone": "Phone",
+    "phonePlaceholder": "Enter your phone number",
+    "save": "Save Changes"
   },
   "invoices": {
     "title": "Invoices",
@@ -149,31 +244,7 @@
       "paid": "Paid",
       "pending": "Pending",
       "overdue": "Overdue"
-    }
-  },
-  "navigation": {
-    "home": "Home",
-    "fleet": "Fleet",
-    "services": "Services",
-    "profile": "Profile",
-    "editProfile": "Edit Profile",
-    "invoices": "Invoices",
-    "support": "Support",
-    "settings": "Settings",
-    "addVehicle": "Add Vehicle",
-    "vehicleDetail": "Vehicle Details",
-    "orderService": "Order Service",
-    "serviceHistory": "Service History"
-  },
-  "support": {
-    "title": "Customer Support",
-    "subtitle": "We're here to help. Contact us through any of the following methods.",
-    "phone": "Phone",
-    "email": "Email",
-    "whatsapp": "WhatsApp",
-    "address": "Office Address",
-    "officeAddress": "123 Fleet St, Casablanca, Morocco",
-    "faqTitle": "Frequently Asked Questions",
-    "viewFaq": "View FAQs"
+    },
+    "downloadInvoice": "Download invoice"
   }
 }
