--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -64,7 +64,7 @@
     },
     "orderService": "Order Service",
     "serviceDetails": "Service Details",
-    "estimatedDuration": "Estimated Duration: {{duration}} minutes",
+    "estimatedDuration": "Estimated Duration: {{duration}} {{unite}}",
     "servicePrice": "Price:",
     "selectVehicle": "Select Vehicle",
     "selectVehiclePrompt": "Tap to select a vehicle",
@@ -77,7 +77,7 @@
     "title": "Order Service",
     "serviceDetails": "Service Details",
     "serviceDate": "Service Date",
-    "estimatedDuration": "Estimated Duration: {{duration}} minutes",
+    "estimatedDuration": "Estimated Duration: {{duration}} {{unite}}",
     "servicePrice": "Price: {{price}}",
     "confirmService": "Confirm Service",
     "fetchError": "Error fetching service details",
