finalised account management

--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -26,6 +26,7 @@
     "close": "Close",
     "cancel": "Cancel",
     "delete": "Delete",
+    "reset": "Reset",
     "orderNewService": "Order new service"
   },
   "conductorHome": {
@@ -256,8 +257,8 @@
     "password_changed": "Password Changed",
     "password_changed_message": "Your password has been successfully changed.",
     "password_change_error": "Password Change Error",
-    "password_change_error_message": "An error occurred while changing your password. Please try again."
-  
+    "password_change_error_message": "An error occurred while changing your password. Please try again.",
+      "manageClientAccounts": "Manage Accounts"
   },
   "editProfile": {
     "changePhoto": "Change Photo",
@@ -308,5 +309,75 @@
     "noNotifications": "You have no notifications",
     "fetchError": "Failed to fetch notifications",
     "tryAgainLater": "Please try again later"
+  },
+  "clientAccounts": {
+    "title": "Client Accounts",
+    "searchPlaceholder": "Search for a client",
+    "fetchError": "Error fetching clients",
+    "emptyStateTitle": "No Clients Yet",
+    "emptyStateDescription": "Add your first account to get started",
+    "addFirstClient": "Add Your First Client",
+    "addClient": "Add Client"
+  },
+  "addClient": {
+    "title": "Add Client",
+    "firstName": "First Name",
+    "lastName": "Last Name",
+    "email": "Email",
+    "phone": "Phone",
+    "role": "Role",
+    "password": "Password",
+    "firstNamePlaceholder": "Enter first name",
+    "lastNamePlaceholder": "Enter last name",
+    "emailPlaceholder": "Enter email address",
+    "phonePlaceholder": "Enter phone number",
+    "roleResponsable": "Responsable",
+    "roleManagement": "Management",
+    "addButton": "Add Client",
+    "success": "Success",
+    "successMessage": "Client added successfully",
+    "error": "Error",
+    "errorMessage": "Failed to add client",
+    "tapToAddAvatar": "Tap to add avatar",
+    "permissionDenied": "Permission Denied",
+    "permissionDeniedMessage": "Please allow access to your photo library to upload an avatar."
+  },
+  "clientDetail": {
+    "title": "Client Details",
+    "firstName": "First Name",
+    "lastName": "Last Name",
+    "email": "Email",
+    "phone": "Phone",
+    "role": "Role",
+    "roleResponsable": "Responsable",
+    "roleManagement": "Management",
+    "updateButton": "Update Client",
+    "resetPasswordButton": "Reset Password",
+    "deleteConfirmTitle": "Delete Client",
+    "deleteConfirmMessage": "Are you sure you want to delete this client?",
+    "resetPasswordConfirmTitle": "Reset Client Password",
+    "resetPasswordConfirmMessage": "Are you sure you want to reset this client's password?",
+    "success": "Success",
+    "updateSuccess": "Client updated successfully",
+    "passwordResetSuccess": "Password reset successfully",
+    "error": "Error",
+    "errorFetching": "Error fetching client details",
+    "updateError": "Error updating client",
+    "deleteError": "Error deleting client",
+    "passwordResetError": "Error resetting password",
+    "clientNotFound": "Client not found",
+    "permissionDenied": "Permission Denied",
+    "permissionDeniedMessage": "Please allow access to your photo library to change the avatar.",
+    "resetPassword": "Reset Password",
+    "newPassword": "New Password",
+    "confirmPassword": "Confirm Password",
+    "password_mismatch": "Password Mismatch",
+    "password_mismatch_message": "The new password and confirmation do not match.",
+    "password_invalid": "Invalid Password",
+    "password_invalid_message": "The password must be at least 8 characters long.",
+    "password_changed": "Password Changed",
+    "password_changed_message": "The client's password has been successfully reset.",
+    "password_change_error": "Error Changing Password",
+    "password_change_error_message": "An error occurred while resetting the password. Please try again."
   }
 }
