fixing vehicule details

--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -1,6 +1,6 @@
 {
   "auth": {
-    "conductorLogin": "Conductor Login",
+    "conductorLogin": "Driver Login",
     "enterVehicleDetails": "Enter your vehicle details",
     "plateNumber": "Plate Number",
     "password": "Password",
@@ -18,7 +18,7 @@
   "common": {
     "login": "Login",
     "you": "You",
-    "conductor": "Conductor",
+    "conductor": "Driver",
     "client": "Client",
     "email": "Email",
     "password": "Password",
@@ -39,6 +39,8 @@
     "kilometers": "Kilometers",
     "fuelType": "Fuel Type",
     "transmission": "Transmission",
+    "conductorName":"Driver",
+    "responsable":"Fleet manager",
     "vin": "VIN",
     "upcomingServices": "Upcoming Services",
     "noUpcomingServices": "No upcoming services",
@@ -188,8 +190,8 @@
     "selectTransmission": "Select Transmission",
     "manual": "Manual",
     "automatic": "Automatic",
-    "conductorPassword": "Conductor Password",
-    "enterConductorPassword": "Enter Conductor Password",
+    "conductorPassword": "Driver Password",
+    "enterConductorPassword": "Enter Driver's Password",
     "addVehicle": "Add Vehicle",
     "fillAllFields": "Please fill all fields",
     "vehicleAdded": "Vehicle added successfully",
@@ -203,6 +205,11 @@
     "model": "Model",
     "kilometers": "Kilometers",
     "fuelType": "Fuel Type",
+    "conductorName":"Driver",
+    "responsable":"Fleet manager",
+    "selectResposanble":"select Manager",
+    "noResponsable":"No Manager",
+    "noConductorName":"No Driver",
     "transmission": "Transmission",
     "vin": "VIN",
     "fuelTypes": {
@@ -217,8 +224,9 @@
     },
     "save": "Save Changes",
     "edit": "Edit Vehicle",
+    
     "delete": "Delete Vehicle",
-    "resetConductorPassword": "Reset Conductor Password",
+    "resetConductorPassword": "Reset Driver's Password",
     "enterNewPassword": "Enter new password",
     "resetPassword": "Reset Password",
     "orderService": "Order Service",
