--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -13,6 +13,13 @@
     "email": "Email",
     "rememberMe": "Remember Me",
     "clientLogin" : "Go back",
+    "createAccount" : "Create an account",
+    "accountInquiry" : "Create an account",
+    "companyName" : "Company name",
+    "fullName" : "Full name",
+    "contactInfo" : "Phone number",
+    "sendInquiry" : "Send",
+    "inquiryFailed" : "Error while creating your inquery",
     "forgotPassword": "Forgot Password?"
   },
   "common": {
@@ -168,18 +175,21 @@
   "addVehicle": {
     "title": "Add Vehicle",
     "brand": "Brand",
+    "vehicleInfo" : "Vehicle Infos",
+    "conductorInfo" : "Driver Infos",
     "selectBrand": "Select Brand",
     "model": "Model",
-    "selectModel": "Select Model",
+    "selectModel": "Model",
     "plateNumber": "Plate Number",
     "enterPlateNumber": "Enter Plate Number",
     "year": "Engine",
     "modelAndYear": "Model and engine",
-    "selectYear": "Select Engine",
+    "selectYear": "Engine",
     "vin": "VIN",
     "enterVin": "Enter VIN",
     "mileage": "Mileage",
     "enterMileage": "Enter Mileage",
+    "fuelTypeAndTransmission": "Fuel Type and Transmission",
     "fuelType": "Fuel Type",
     "selectFuelType": "Select Fuel Type",
     "gasoline": "Gasoline",
@@ -192,10 +202,17 @@
     "automatic": "Automatic",
     "conductorPassword": "Driver Password",
     "enterConductorPassword": "Enter Driver's Password",
+    "enterConductorName": "Enter Driver's Password",
     "addVehicle": "Add Vehicle",
     "fillAllFields": "Please fill all fields",
     "vehicleAdded": "Vehicle added successfully",
     "addFailed": "Failed to add vehicle",
+    "conductorName":"Driver",
+    "enterconductorName":"Enter Driver",
+    "responsable":"Fleet manager",
+    "selectResposanble":"select Manager",
+    "noResponsable":"No Manager",
+    "noConductorName":"No Driver",
     "brandsFetchFailed": "Failed to fetch brands"
   },
   "vehicleDetail": {
@@ -256,6 +273,8 @@
     "confirm_delete_account": "Confirm account deletion",
     "account_deletion_pending": "Account Deletion Pending",
     "account_deletion_time": "Your account deletion request has been received. This process may take up to 5 business days. Logging back in during this time will cancel the deletion request.",
+     "account_creation_pending": "Account Creation Pending",
+    "account_creation_time": "Your account creation request has been received.You will be contacted by a member of our team shortly to confirm and complete your account creation.",
     "ask_confirm_delete_account": "Are you sure you want to delete your account? This action is irreversible.",
     "changePassword": "Change Password",
     "currentPassword": "Current Password",
