--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -132,6 +132,7 @@
     "home": "Home",
     "fleet": "Fleet",
     "services": "Services",
+    "stats": "Statistics",
     "profile": "Profile",
     "orderService": "Order Service",
     "serviceHistory": "Service History",
