fixed header in ios

--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -330,7 +330,9 @@
     "chat": "Chat",
     "accepted": "Accepted by {{user}} at {{date}}",
     "refused": "Refused by {user} at {date}",
-    "Status": "Status"
+    "Status": "Status",
+    "cant_send_msg_finished" : "Cannot send messages for cancelled or completed services.",
+    "cannotSendMessage" : "You can not reply to this chat"
   },
   "recordingModal":{
    "playback" :  "Playback, send, or cancel your recording",
