--- a/src/localization/fr.json
+++ b/src/localization/fr.json
@@ -1,10 +1,57 @@
 {
+  "services": {
+    "categories": {
+      "repair": "Diagnostic électronique et mécanique",
+      "carossrie": "Carrosserie et rénovation",
+      "comfort": "Confort",
+      "maintenance": "Entretien préventif",
+      "diagnostics": "Diagnostics"
+    },
+    "uncategorized": "Non catégorisé",
+    "price": "Prix : {{price}}",
+    "servicePrice": "Prix :",
+    "serviceNotFound": "Service non trouvé",
+    "confirmOrder": "Confirmer la commande",
+    "noServicesAvailable": "Aucun service disponible",
+    "orderService": "Commander un service",
+    "serviceDate": "Date du service",
+    "serviceDetails": "Détails du service",
+    "title": "Services disponibles",
+    "submitError": "Erreur lors de la soumission de la commande",
+    "estimatedDuration": "Durée estimée : {{duration}} {{unite}}",
+    "availableServices": "Services disponibles",
+    "fetchError": "Erreur lors de la récupération des services",
+    "quote": "Sur Devis",
+    "selectVehicle": "Sélectionner un véhicule",
+    "selectVehiclePrompt": "Appuyez pour sélectionner un véhicule"
+  },
+  "invoices": {
+    "title": "Factures",
+    "searchPlaceholder": "Rechercher une facture",
+    "status": {
+      "paid": "Payée",
+      "pending": "En attente",
+      "overdue": "En retard"
+    },
+    "downloadInvoice": "Télécharger la facture"
+  },
+  "notifications": {
+    "title": "Notifications",
+    "noNotifications": "Vous n'avez pas de notifications",
+    "fetchError": "Échec de la récupération des notifications",
+    "tryAgainLater": "Veuillez réessayer plus tard"
+  },
   "auth": {
     "conductorLogin": "Conducteur",
     "enterVehicleDetails": "Entrez les détails de votre véhicule",
     "plateNumber": "Numéro de plaque",
     "password": "Mot de passe",
+    "enterVehicleDetails": "Entrez les détails de votre véhicule",
     "signIn": "Se connecter",
+    "rememberMe": "Se souvenir de moi",
+    "companyName": "Nom de l'entreprise",
+    "conductorLogin": "Connexion du conducteur",
+    "plateNumber": "Numéro d'immatriculation",
     "error": "Erreur",
     "allFieldsRequired": "Tous les champs sont nécessaires",
     "invalidCredentials": "Des références non valides",
@@ -52,11 +99,15 @@
     "upcomingServices": "Services à venir",
     "noUpcomingServices": "Pas de services à venir",
     "fuelTypes": {
-      "gasoline": "Essence",
       "diesel": "Diesel",
+      "gasoline": "Essence",
       "electric": "Électrique",
       "hybrid": "Hybride"
     },
+    "fuelType": "Type de carburant",
+    "noUpcomingServices": "Aucun service à venir",
+    "unknownError": "Une erreur inconnue s'est produite",
+    "responsable": "Gestionnaire de flotte",
     "transmissionTypes": {
       "manual": "Manuel",
       "automatic": "Automatique",
@@ -177,7 +228,17 @@
     "addFirstVehicle": "Ajoutez votre premier véhicule"
   },
   "addVehicle": {
+    "noConductorName": "Pas de conducteur",
+    "automatic": "Automatique",
+    "fuelTypeAndTransmission": "Type de carburant et transmission",
     "title": "Ajouter un véhicule",
+    "enterMileage": "Entrez le kilométrage",
+    "diesel": "Diesel",
+    "selectFuelType": "Sélectionner le type de carburant",
+    "selectBrand": "Sélectionner une marque",
+    "modelAndYear": "Modèle et moteur",
+    "model": "Modèle",
+    "manual": "Manuelle",
     "brand": "Marque",
     "vehicleInfo": "Infos de véhicule",
     "conductorInfo": "Conducteur infos",
@@ -187,7 +248,6 @@
     "plateNumber": "Numéro de plaque",
     "enterPlateNumber": "Entrez le numéro de plaque",
     "year": "Moteur",
-    "modelAndYear": "Modèle et moteur",
     "selectYear": "Moteur",
     "vin": "Vin",
     "enterVin": "Entrer",
@@ -195,9 +255,7 @@
     "enterMileage": "Entrer dans le kilométrage",
     "fuelTypeAndTransmission": "Type de carburant et transmission",
     "fuelType": "Type de carburant",
-    "selectFuelType": "Sélectionner le type de carburant",
     "gasoline": "Essence",
-    "diesel": "Diesel",
     "electric": "Électrique",
     "hybrid": "Hybride",
     "transmission": "Transmission",
@@ -383,7 +441,6 @@
     "permissionDeniedMessage": "Veuillez permettre l'accès à votre bibliothèque photo pour télécharger un avatar."
   },
   "clientDetail": {
-    "title": "Détails du client",
     "firstName": "Prénom",
     "lastName": "Nom de famille",
     "email": "E-mail",
@@ -421,6 +478,11 @@
     "password_change_error_message": "Une erreur s'est produite lors de la réinitialisation du mot de passe. "
   },
   "statistics": {
+    "totalOrders": "Total des commandes",
+    "completed": "Terminé",
+    "in_progress": "En cours",
+    "pending": "En attente",
+    "vehicles": "Véhicules",
     "title": "Statistiques",
     "startDate": "Date de début",
     "endDate": "Date de fin",
@@ -435,9 +497,185 @@
     "averageServicePrice": "En attente",
     "allVehicles": "Tous les véhicules",
     "allConductors": "Tous les conducteurs",
+    "cancelled": "Annulé"
+  },
+  "vehicleDetail": {
+    "make": "Marque",
+    "deleteConfirmMessage": "Êtes-vous sûr de vouloir supprimer ce véhicule ?",
+    "resetConductorPassword": "Réinitialiser le mot de passe du conducteur",
+    "edit": "Modifier le véhicule",
+    "model": "Modèle",
+    "noConductorName": "Pas de conducteur",
+    "fuelTypes": {
+      "gasoline": "Essence",
+      "diesel": "Diesel",
+      "hybrid": "Hybride",
+      "electric": "Électrique"
+    },
+    "enterNewPassword": "Entrez le nouveau mot de passe",
+    "updateFailed": "Échec de la mise à jour du véhicule",
+    "transmissionTypes": {
+      "manual": "Manuelle",
+      "automatic": "Automatique"
+    },
+    "deleteSuccess": "Véhicule supprimé avec succès",
+    "kilometers": "Kilomètres",
+    "details": "Détails du véhicule",
+    "resetPassword": "Réinitialiser le mot de passe",
+    "noResponsable": "Pas de gestionnaire",
+    "selectResposanble": "Sélectionner le gestionnaire",
+    "transmission": "Transmission",
+    "unknownError": "Une erreur inconnue s'est produite",
+    "year": "Moteur",
+    "deleteConfirmTitle": "Supprimer le véhicule",
+    "save": "Enregistrer les modifications",
+    "deleteFailed": "Échec de la suppression du véhicule",
+    "conductorName": "Conducteur",
+    "passwordResetSuccess": "Mot de passe réinitialisé avec succès",
+    "updateSuccess": "Véhicule mis à jour avec succès",
+    "orderService": "Commander un service",
+    "passwordResetFailed": "Échec de la réinitialisation du mot de passe",
+    "vin": "VIN",
+    "fuelType": "Type de carburant",
+    "responsable": "Gestionnaire de flotte",
+    "serviceHistory": "Historique des services",
+    "delete": "Supprimer le véhicule",
+    "fetchError": "Erreur lors de la récupération des détails du véhicule"
+  },
+  "addClient": {
+    "firstName": "Prénom",
+    "role": "Rôle",
+    "lastName": "Nom",
+    "firstNamePlaceholder": "Entrez le prénom",
+    "permissionDeniedMessage": "Veuillez autoriser l'accès à votre bibliothèque de photos pour télécharger un avatar.",
+    "lastNamePlaceholder": "Entrez le nom",
+    "roleResponsable": "Responsable",
+    "phonePlaceholder": "Entrez le numéro de téléphone",
+    "title": "Ajouter un client",
+    "tapToAddAvatar": "Appuyez pour ajouter un avatar",
+    "email": "Email",
+    "emailPlaceholder": "Entrez l'adresse email",
+    "password": "Mot de passe",
+    "addButton": "Ajouter le client",
+    "success": "Succès",
+    "phone": "Téléphone",
+    "roleManagement": "Gestion",
+    "successMessage": "Client ajouté avec succès",
+    "error": "Erreur",
+    "errorMessage": "Échec de l'ajout du client",
+    "permissionDenied": "Permission refusée"
+  },
+  "ticket": {
+    "carInfo": "Véhicule",
+    "Status": "Statut",
+    "serviceType": "Service",
+    "refused": "Refusé par {{user}} le {{date}}",
+    "cannotSendMessage": "Vous ne pouvez pas répondre à ce chat",
+    "waiting": "En attente de votre confirmation",
+    "accepted": "Accepté par {{user}} le {{date}}",
+    "Date": "Date",
+    "inputPlaceholder": "Tapez votre message",
+    "chat": "Chat",
+    "cant_send_msg_finished": "Impossible d'envoyer des messages pour les services annulés ou terminés."
+  },
+  "serviceHistory": {
+    "cost": "Coût",
+    "sort": "Trier",
+    "unknownCost": "Coût inconnu",
+    "unknownService": "Service inconnu",
+    "unknownStatus": "Statut inconnu",
+    "date": "Date",
+    "title": "Historique des services",
+    "fetchError": "Erreur lors de la récupération de l'historique des services",
+    "noRecords": "Aucun enregistrement de service trouvé",
+    "filter": "Filtrer",
+    "filterBy": "Filtrer par",
+    "sortBy": "Trier par",
+    "ascending": "Croissant",
+    "descending": "Décroissant",
+    "export": "Exporter l'historique",
+    "unknownVehicle": "Véhicule inconnu"
+  },
+  "navigation": {
+    "orderService": "Commander un service",
+    "serviceHistory": "Historique des services",
+    "services": "Services",
+    "addVehicle": "Ajouter un véhicule",
+    "vehicleDetails": "Détails du véhicule",
+    "stats": "Statistiques",
+    "serviceChat": "Chat de service",
+    "settings": "Paramètres",
+    "home": "Accueil",
+    "fleet": "Flotte",
+    "profile": "Profil",
+    "invoices": "Factures",
+    "editProfile": "Modifier le profil",
+    "support": "Support"
+  },
+  "support": {
+    "address": "Adresse",
+    "downloadInvoice": "Télécharger la facture",
+    "title": "Informations de contact",
+    "subtitle": "Disponible pendant les heures de bureau",
+    "phone": "Téléphone",
+    "email": "Email",
+    "whatsapp": "Whatsapp"
+  },
+  "serviceStatus": {
+    "completed": "Terminé",
+    "all": "Tous",
     "pending": "En attente",
     "in_progress": "En cours",
     "completed": "Complété",
     "cancelled": "Annulé"
+  },
+  "recordingModal": {
+    "title": "Enregistrer l'audio",
+    "recording": "Enregistrement... Relâchez pour arrêter",
+    "textPrompt": "Dites-nous comment pouvons-nous vous aider",
+    "pressRecord": "Appuyez et maintenez pour enregistrer",
+    "playback": "Écouter, envoyer ou annuler votre enregistrement"
+  },
+  "orderService": {
+    "title": "Commander un service",
+    "selectVehicle": "Sélectionner un véhicule",
+    "success": "Succès",
+    "serviceConfirmed": "Le service a été confirmé",
+    "servicePrice": "Prix : {{price}}",
+    "confirmError": "Erreur lors de la confirmation du service. Veuillez réessayer.",
+    "fetchError": "Erreur lors de la récupération des détails du service",
+    "serviceDetails": "Détails du service",
+    "error": "Erreur",
+    "serviceDate": "Date du service",
+    "estimatedDuration": "Durée estimée : {{duration}} {{unite}}",
+    "confirmService": "Confirmer le service",
+    "changeVehicle": "Changer le véhicule sélectionné",
+    "unknownError": "Une erreur inconnue s'est produite"
+  },
+  "fleet": {
+    "searchPlaceholder": "Rechercher",
+    "emptyStateDescription": "Ajoutez votre premier véhicule pour commencer",
+    "addVehicle": "Ajouter un véhicule",
+    "title": "Flotte",
+    "fetchError": "Erreur lors de la récupération des véhicules",
+    "emptyStateTitle": "Pas encore de véhicules",
+    "addFirstVehicle": "Ajouter votre premier véhicule"
+  },
+  "error": {
+    "title": "Erreur",
+    "fetchFailed": "Échec de la récupération des données",
+    "deleted": "-Supprimé-"
+  },
+  "editProfile": {
+    "title": "Modifier le profil",
+    "changePhoto": "Changer la photo",
+    "phonePlaceholder": "Entrez votre numéro de téléphone",
+    "phone": "Téléphone",
+    "firstName": "Prénom",
+    "lastName": "Nom",
+    "email": "Email",
+    "emailPlaceholder": "Entrez votre email",
+    "save": "Enregistrer les modifications",
+    "namePlaceholder": "Entrez votre nom"
   }
 }
